--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,8 +1,9 @@
+/*Sidebar*/
+
 .sidebar{
   width: 275px;
-  top: 0;
-  left: 0;
-  bottom: 0;
+  
+
 
 }
 
@@ -92,3 +93,135 @@ width: 250px;
 
 }
 .sidebar .me .photo .lbl {}
+
+.app-content{
+  flex: 2;
+  padding: 20px 0;
+
+}
+
+/*HomePage*/
+
+
+.home-page{
+
+}
+.home-page .section {}
+.home-page .section .title{
+ 
+}
+.home-page .section .tutors {
+  margin-top: 20px;
+}
+.home-page .section .tutors .tutor {
+  border: 2px #ea5252 solid;
+  background: #fff;
+  width: 60px;
+  height: 60px;
+  overflow: hidden;
+  margin-right:20px;
+  border-radius: 25px;
+  padding: 3px;
+}
+.home-page .section .tutors .tutor img{
+  width: 100%;
+  height: 100%;
+  border-radius: 55px;
+}
+.home-page .section .tutors .tutor:hover {}
+
+.home-page .section-b {
+  margin-top: 50px;
+ 
+}
+
+.home-page .section-b .courses{
+
+}
+.home-page .section-b .courses a {}
+.home-page .section-b .courses .block {
+  width: 240px;
+  height: 300px;
+  border-radius: 10px;
+  margin-top: 10px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  margin-right: 20px;
+}
+.home-page .section-b .courses .block .user{
+
+}
+.home-page .section-b .courses .block .user .pic {
+height: 40px;
+border: 2px #fff solid;
+border-radius: 50%;
+padding: 3px;
+margin-right: 10px;
+width: 40px
+
+}
+.home-page .section-b .courses .block .user .pic img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+.home-page .section-b .courses .block .user  {
+   padding: 20px;
+   z-index: 1;
+  }
+.home-page .section-b .courses .block .user .meta {}
+.home-page .section-b .courses .block .user .meta .name {}
+.home-page .section-b .courses .block .user .meta .uname {}
+.home-page .section-b .courses .block .dura {
+  top:85px;
+  left: 20px;
+ background:#ea5252 ;
+  line-height: 1;
+  padding: 7px 15px; 
+  border-radius: 10px;
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.33);
+
+}
+.home-page .section-b .courses .block .course-title{
+  bottom: -190px;
+  left: 10px;
+  right: 10px;
+  padding: 15px 20px;
+  background:rgba(0, 0, 0, 0.75);
+  border-radius: 20px;
+  text-align:center;
+  text-shadow: 1px 1px 1px #000;
+  
+}
+.home-page .section .user-block{
+  margin: 0px 50px 0px 0px;
+  margin-bottom: 30px;
+}
+
+.home-page .section .user-block .pic {
+  width: 40px;
+  height: 40px;
+  border:  2px #fff solid;
+  padding: 3px ;
+  margin-right: 10px;
+}
+.home-page .section .user-block .pic img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+.home-page .section .user-block .meta {}
+.home-page .section .user-block .meta .name {}
+.home-page .section .user-block .meta .uname{}
+.top-tutors{
+  flex-wrap: wrap;
+}
+
+/*Rightbar*/
+
+
+.rightbar{
+  flex: 1 ;
+  border-left: 1px #ddd solid;
+}
