--- a/src/css/props.css
+++ b/src/css/props.css
@@ -25,6 +25,10 @@ h1,h2,h3,h4,h5,h6{
     align-items: center;
 
 }
+button{
+    outline: none;
+    cursor: pointer;
+}
 .jic{
     justify-content: center;
 }
@@ -59,6 +63,16 @@ h1,h2,h3,h4,h5,h6{
     font-weight:bold;
     
 }
+.fontn{
+    font-weight: normal;
+}
 .svgIcon{
     width: 20px;
+}
+
+.abs{
+    position:absolute;
+}
+.rel{
+    position: relative;
 }
