--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,7 @@
+
+.App{
+  padding: 0 20px 0 0 ;
+}
 /*Sidebar*/
 
 .sidebar{
@@ -106,8 +110,8 @@ width: 250px;
 .home-page{
 
 }
-.home-page .section {}
-.home-page .section .title{
+.section {}
+.section .title{
  
 }
 .home-page .section .tutors {
@@ -135,12 +139,14 @@ width: 250px;
  
 }
 
-.home-page .section-b .courses{
+ .section-b .courses{
 
 }
-.home-page .section-b .courses a {}
-.home-page .section-b .courses .block {
-  width: 240px;
+ .section-b .courses a {
+   flex: 1;
+ }
+ .section-b .courses .block {
+  /* min-width: 240px; */
   height: 300px;
   border-radius: 10px;
   margin-top: 10px;
@@ -149,10 +155,10 @@ width: 250px;
   background-position: center;
   margin-right: 20px;
 }
-.home-page .section-b .courses .block .user{
+ .section-b .courses .block .user{
 
 }
-.home-page .section-b .courses .block .user .pic {
+ .section-b .courses .block .user .pic {
 height: 40px;
 border: 2px #fff solid;
 border-radius: 50%;
@@ -161,19 +167,19 @@ margin-right: 10px;
 width: 40px
 
 }
-.home-page .section-b .courses .block .user .pic img {
+ .section-b .courses .block .user .pic img {
   width: 100%;
   height: 100%;
   border-radius: 50%;
 }
-.home-page .section-b .courses .block .user  {
+ .section-b .courses .block .user  {
    padding: 20px;
    z-index: 1;
   }
-.home-page .section-b .courses .block .user .meta {}
-.home-page .section-b .courses .block .user .meta .name {}
-.home-page .section-b .courses .block .user .meta .uname {}
-.home-page .section-b .courses .block .dura {
+ .section-b .courses .block .user .meta {}
+ .section-b .courses .block .user .meta .name {}
+ .section-b .courses .block .user .meta .uname {}
+.section-b .courses .block .dura {
   top:85px;
   left: 20px;
  background:#ea5252 ;
@@ -183,7 +189,7 @@ width: 40px
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.33);
 
 }
-.home-page .section-b .courses .block .course-title{
+ .section-b .courses .block .course-title{
   bottom: -190px;
   left: 10px;
   right: 10px;
@@ -193,27 +199,28 @@ width: 40px
   text-align:center;
   text-shadow: 1px 1px 1px #000;
   
+  
 }
-.home-page .section .user-block{
+.section .user-block{
   margin: 0px 50px 0px 0px;
   margin-bottom: 30px;
 }
 
-.home-page .section .user-block .pic {
+ .section .user-block .pic {
   width: 40px;
   height: 40px;
   border:  2px #fff solid;
   padding: 3px ;
   margin-right: 10px;
 }
-.home-page .section .user-block .pic img{
+ .user-block .pic img{
     width: 100%;
     height: 100%;
     border-radius: 50%;
 }
-.home-page .section .user-block .meta {}
-.home-page .section .user-block .meta .name {}
-.home-page .section .user-block .meta .uname{}
+.section .user-block .meta {}
+.section .user-block .meta .name {}
+ .section .user-block .meta .uname{}
 .top-tutors{
   flex-wrap: wrap;
 }
@@ -223,5 +230,79 @@ width: 40px
 
 .rightbar{
   flex: 1 ;
-  border-left: 1px #ddd solid;
+  padding: 25px 0px;
+
+}
+.rightbar .serach-box{
+margin: 25px 0px;
+margin-bottom: 67px;
+}
+.rightbar .serach-box .qry {
+  flex: 1;
+  border: 0;
+  padding: 15px;
+  background: #eaeaea;
+  margin-right: 10px;
+  border-radius: 5px;
+}
+
+.rightbar .serach-box .go {
+  border: 0;
+  background: #ea5252;
+  padding: 0 20px;
+  border-radius: 5px;
+}
+.rightbar .serach-box .go:hover {
+  background: #d24444;
+}
+.rightbar .courses {
+  flex-direction: column;
+}
+.rightbar .courses .cols {
+flex-direction: row;
+}
+.rightbar .course-a .block {
+  width: 100%;
+  height: 250px; 
+  margin-bottom: 20px;
+}
+
+.rightbar .courses .cols .block{
+
+}
+
+.rightbar .special-offer{
+background: #e5fcf5;
+padding: 20px;
+margin-top: 14px;
+border-radius: 20px;
+overflow: hidden;
+}
+.rightbar .special-offer .meta {
+  padding: 30px;
+}
+.rightbar .special-offer .meta .h1 {}
+.rightbar .special-offer .meta .h2 {}
+.rightbar .special-offer .meta button {
+  background:#fff;
+  border: 0;
+  border-radius: 10px;
+  padding: 14px 20px;
+  margin-top: 20px;
+  box-shadow: 0 2px 4px rgba(0,0,0, 0.25);
+}
+.rightbar .special-offer .meta button:hover{
+  background-color: #ea5252;
+  color: white;
+}
+.rightbar .special-offer .vector {
+  align-items: center;
+  justify-content: center;
+  flex:1;
+  padding-top: 30px;
+}
+.rightbar .special-offer .vector  img{}
+
+.new__courses{
+  cursor: pointer;
 }
