--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,6 +2,106 @@
 .App{
   padding: 0 20px 0 0 ;
 }
+
+/*
+Splash
+*/
+.splash {}
+
+.splash img {
+  height: 100px;
+}
+
+/*
+VIDEO PLAYER
+*/
+.player {
+  width: 100%;
+  height: 55%;
+  background: #000;
+}
+
+.player video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.player .ctrls {
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  height: 90px;
+  background: rgba(62, 62, 62, 0.54);
+  z-index: 9;
+  padding: 0px 15px;
+}
+
+.player .ctrls .pp {
+  border: 0px;
+ 
+  height: 50px;
+  border-radius: 10px;
+  background: #ea5252;
+  color: #fff;
+  width: 20px;
+  height: 20px;
+}
+
+.player .ctrls .timer {
+  flex: 1;
+  margin: 0px;
+  text-align: center;
+}
+
+.player .ctrls .slider {
+  flex: 3;
+}
+
+.player .ctrls .slider .prog {
+  width: 100%;
+  height: 10px;
+  background: #ffffff;
+  border-radius: 10px;
+}
+
+.player .ctrls .slider .bar {
+  width: 40%;
+  height: 10px;
+  background: #ea5252;
+  border-radius: 10px;
+}
+
+.player .ctrls .slider .bar .knob {
+  width: 20px;
+  height: 20px;
+  background: #fff;
+  border-radius: 100%;
+  top: 50%;
+  right: 0px;
+  transform: translateY(-50%);
+  box-shadow: 0px 0px 5px #000;
+}
+
+.player .ctrls .vol {
+  border: 0px;
+  width: 30px;
+  height: 30px;
+  border-radius: 10px;
+  background: rgba(234, 82, 82, 0);
+  color: #fff;
+  margin: 0px 10px;
+}
+
+.player .ctrls .fs {
+  border: 0px;
+  width: 30px;
+  height: 30px;
+  border-radius: 10px;
+  background: rgba(234, 82, 82, 0);
+  color: #fff;
+  margin: 0px 10px;
+}
 /*Sidebar*/
 
 .sidebar{
@@ -59,23 +159,23 @@ margin-left: 40px;
 .sidebar .updated-course .lbl {}
 .sidebar .updated-course .lbl h3  {}
 
-.sidebar .stats{
+.course-stats ,.sidebar .stats{
 padding: 20px 40px;
 }
-.sidebar .stats  .stats-box{
+.course-stats .stats-box,.sidebar .stats  .stats-box{
   flex-direction: column;
 width: 110px;
   padding: 20px
 }
-.sidebar .stats .stats-box .ico {
+.course-stats .stats-box .ico,.sidebar .stats .stats-box .ico {
   margin-bottom: 15px;
 }
 .sidebar .stats .stats-box .val {}
 .sidebar .stats .stats-box .lbl {}
-.sidebar .stats .stats-box .ico-points {
+.course-stats .ico-points ,.sidebar .stats .stats-box .ico-points {
   color: #1aab53;
 }
-.sidebar .stats .stats-box .ico-battery {
+.course-stats .ico-battery,.sidebar .stats .stats-box .ico-battery {
   color: #ea5252;
 }
 .sidebar .me{
@@ -306,3 +406,161 @@ overflow: hidden;
 .new__courses{
   cursor: pointer;
 }
+
+
+/*
+COURSE PREVIEW
+*/
+.course-page {}
+
+.course-info {
+  flex: 1;
+}
+
+.course-page .tutor {}
+
+.course-page .tutor .pic {
+  width: 40px;
+  height: 40px;
+  border-radius: 10px;
+  background: #eee;
+  margin-right: 10px;
+}
+
+.course-page .tutor .pic img {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+
+.course-page .tutor .meta {}
+
+.course-page .tutor .meta .name {}
+
+.course-page .tutor .meta .uname {}
+
+.course-page .course-meta {
+  padding: 40px 0px;
+  
+}
+
+.course-page .course-meta .title {
+  font-weight: 600;
+  margin-bottom: 20px;
+  max-width: 450px;
+}
+
+.course-page .course-meta .about {}
+
+.course-videos {
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 20px 0px;
+}
+
+.course-videos a {
+  margin: 10px 0px;
+}
+
+.course-videos a .id {
+  background: #ea5252;
+  width: 50px;
+  height: 50px;
+  border-radius: 14px;
+  padding: 14px 20px;
+  box-sizing: border-box;
+  margin-right: 10px;
+}
+
+.course-videos a .meta {}
+
+.course-videos a .meta .lbl {}
+
+.course-videos a .meta .dur {}
+
+.course-videos a:hover {}
+
+.course-preview {
+  flex: 2;
+  margin-left: 20px;
+}
+
+.extra-block {}
+
+.chat {
+  flex: 1;
+  margin-right: 50px;
+}
+
+.chat .messages {
+  flex-direction: column;
+  text-align: left;
+  justify-content: flex-start;
+  padding: 30px 0px;
+}
+
+.chat .messages .bubble {
+  align-self: flex-start;
+  margin: 7px 0px;
+  width: 100%;
+}
+
+.chat .messages .bubble .txt {
+  background: #d6d6d6;
+  line-height: 1;
+  padding: 14px;
+  border-radius: 20px 20px 20px 3px;
+}
+
+.chat .messages .bubble-mine {
+  text-align: right;
+}
+
+.chat .messages .bubble-mine .txt {
+  border-radius: 20px 20px 3px 20px !important;
+  background: #272727;
+  color: #fff;
+}
+
+.now-watching {
+  flex: 1;
+}
+
+.now-watching .tooltip {
+  background: #ea5252;
+  top: 50px;
+  right: 0px;
+  padding: 8px 15px;
+  border-radius: 10px;
+}
+
+.now-watching .you-list {
+  margin-top: 25px;
+}
+
+.now-watching .you {
+  margin-bottom: 30px;
+}
+
+.now-watching .you .pic {
+  width: 40px;
+  height: 40px;
+  margin-right: 12px;
+  background: #ddd;
+  border-radius: 100%;
+}
+
+.now-watching .you .pic img {
+  width: 100%;
+  height: 100%;
+  border-radius: 100%;
+}
+
+.now-watching .you .meta {}
+
+.now-watching .you .meta .name {}
+
+.now-watching .you .meta .uname {}
+
+
+
